# PDF_to_Presentation

./: .env.example  .gitignore  DISTRIBUTION_README.md  PDF_to_Presentation_Converter.spec  PDF_to_Presentation_Converter_v2.spec  PORTABLE_DISTRIBUTION.md  README.md  SETUP_GUIDE.md  USER_GUIDE.md  app.py  build_exe.bat  build_portable.py  build_portable_v2.py  config.py  launcher.py  launcher_simple.py  llm_agent.py  pdf_processor.py  pdf_to_presentation.spec  pyproject.toml  requirements.txt  run_app.bat  run_app.sh  run_exe_debug.bat  test_setup.py
evals/: calibrate_oracle.py  judge.py  results_figures.json
example/: AKUT İNFLAMASYONUN MORFOLJiK PATERNLERİ.pptx
output/: presentation_20250810_200743.pptx  presentation_20250810_201101.pptx  presentation_20250810_201450.pptx  presentation_20250810_201802.pptx  presentation_20250810_202101.pptx  presentation_20250810_202245.pptx  presentation_20250810_202648.pptx  presentation_20250810_202705.pptx  presentation_20250810_213822.pptx  presentation_20250810_214250.pptx  presentation_20250810_214838.pptx  presentation_20250810_215431.pptx  presentation_20250810_215902.pptx  presentation_20250810_220551.pptx  presentation_20250810_221111.pptx  presentation_20250810_221805.pptx  presentation_20250810_222031.pptx  presentation_20250810_222537.pptx  presentation_20250810_223206.pptx  presentation_20250810_223443.pptx  presentation_20250810_223926.pptx  presentation_20250810_224411.pptx  presentation_20250810_224512.pptx  presentation_20250810_231709.pptx  presentation_20250904_140153.pptx  presentation_20250904_141228.pptx  (+4 more)
(+52 files in other folders)
