[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfdeck"
version = "2.0.0"
description = "Agentic converter: medical textbook PDF excerpts -> student presentation decks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain-anthropic>=0.3",
    "langchain-core>=0.3",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pymupdf>=1.24",
    "pymupdf4llm>=0.0.17",
    "python-pptx>=1.0",
    "pillow>=10.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "typer>=0.12",
    "requests>=2.31",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
ui = ["streamlit>=1.35"]
dev = ["pytest>=8.0"]

[project.scripts]
pdfdeck = "pdfdeck.cli:app"

[tool.setuptools.packages.find]
include = ["pdfdeck*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: real-PDF extraction tests (offline, no API keys)",
    "vision: tests that call the live Anthropic API (opt-in: pytest -m vision)",
]
addopts = "-m 'not vision'"
